# NoteCal

./: .gitignore  CONTRIBUTING.md  LICENSE  NoteCal.sln  NoteCal.spec  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt  run.py  启动 NoteCal.bat
.github/workflows/: release.yml
NoteCal.Core.Tests/: NoteCal.Core.Tests.csproj  Program.cs
NoteCal.Core/Models/: AppSettings.cs  AttendanceStats.cs  CalendarDay.cs  NoteEntry.cs
NoteCal.Core/Services/: AttendanceStatsService.cs  CalendarService.cs  LunarCalendarService.cs  NoteRepository.cs  SettingsRepository.cs  SummaryService.cs
NoteCal.Launcher/: NoteCal.Launcher.csproj  Program.cs
NoteCal.WinUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NoteCal.WinUI.csproj  Package.appxmanifest  app.manifest
NoteCal.WinUI/Pages/: HomePage.xaml  HomePage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  StatsPage.xaml  StatsPage.xaml.cs  SummaryPage.xaml  SummaryPage.xaml.cs
NoteCal.WinUI/Properties/: launchSettings.json
NoteCal.WinUI/Services/: AppDataPaths.cs  AppState.cs
NoteCal.WinUI/ViewModels/: DashboardDayViewModel.cs  DashboardViewModel.cs  SettingsViewModel.cs  StatsViewModel.cs  SummaryViewModel.cs
docs/superpowers/specs/: 2026-07-06-winui3-dashboard-implementation-plan.md  2026-07-06-winui3-dashboard-redesign.md
scripts/: accept-winui-ui.ps1  build-winui-release.ps1  smoke-winui-release.ps1
src/: __init__.py  app_metadata.py  attendance_stats.py  calendar_core.py  calendar_delegate.py  calendar_model.py  calendar_roles.py  data_manager.py  dialogs.py  lunar_utils.py  main_app.py  theme.py  tray_controller.py  window_events.py
src/dialogs/: __init__.py  attendance_stats_dialog.py  date_note_dialog.py  log_viewer_dialog.py  selected_summary_dialog.py  settings_dialog.py  year_month_dialog.py
tests/: test_app_metadata.py  test_attendance_stats.py  test_calendar_core.py  test_calendar_roles.py  test_data_manager.py  test_lunar_utils.py  test_main_app_dependencies.py  test_window_events.py
