[project]
name = "notecal"
version = "0.5.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A powerful note and calendar integration application with Win11 Fluent style"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com/notecal"
"Bug Tracker" = "https://example.com/notecal/issues"

[project.requires-dist]
python-docx = "*"