[project]
name = "notecal"
version = "0.5.0"
authors = [
  { name = "fc525260", email = "" },
]
description = "A powerful note and calendar integration application with Win11 Fluent style"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.requires-dist]
PyQt5>=5.15.0
lunarcalendar>=0.0.9

[project.urls]
Homepage = "https://github.com/fc525260/NoteCal"
"Bug Tracker" = "https://github.com/fc525260/NoteCal/issues"
