[project]
name = "notecal"
version = "0.7.0"
authors = [
  { name = "fc525260", email = "" },
]
description = "A powerful note and calendar integration application with Win11 Fluent style"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyQt5>=5.15.0",
    "lunarcalendar>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/fc525260/NoteCal"
"Bug Tracker" = "https://github.com/fc525260/NoteCal/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
